--- a/index.html
+++ b/index.html
@@ -1,154 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Prashant Kumar - Web Developer Portfolio</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
+        <link rel="stylesheet" type="text/css" href="style.css" />
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prashant Kumar - Web Developer Portfolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style.css">
-</head>
+    <body>
+        <header>
+            <nav id="navb">
+                <div class="left">Prashant's Portfolio</div>
+                <div class="right" id="home">
+                    <ul>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#aboutme">About</a></li>
+                        <li><a href="#workxp">Work Experience</a></li>
+                        <li><a href="#contact">Contact Me</a></li>
+                        <li>
+                            <a href="/prashant_resume1.pdf" target="_blank" class="button">My Resume</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+        <main>
+            <section class="first">
+                <div class="leftsection">
+                    Hi, My name is<br />
+                    <span class="name">Prashant Kumar</span>
+                    <div class="role">I am a learner and a</div>
+                    <span id="element"></span>
+                </div>
 
-<body>
-    <header>
-        <nav id="navb">
-            <div class="left">Prashant's Portfolio</div>
-            <div class="right" id="home">
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#aboutme">About</a></li>
-                    <li><a href="#workxp">Work Experience</a></li>
-                    <li><a href="#contact">Contact Me</a></li>
-                    <li>
-                        <a href="/prashant_resume1.pdf" target="_blank" class="button">My Resume</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </header>
-    <main>
-        <section class="first">
-            <div class="leftsection">Hi, My name is<br>
-                <span class="name">Prashant Kumar</span>
-                <div class="role">I am a learner and a</div>
-                <span id="element"></span>
-            </div>
+                <div class="rightsection">
+                    <img src="./imagess/dev1.png" alt="" />
+                </div>
+            </section>
+            <hr id="aboutme" />
+            <h1>About Me</h1>
 
-            <div class="rightsection">
-                <img src="./imagess/hero-banner.jpeg" alt="">
-            </div>
-
-        </section>
-        <hr id="aboutme">
-        <h1>About Me</h1>
-
-        <section class="secondsection">
-
-            <div class="aboutleftsection">I am a developer learning constantly<br>
-                <span class="info">Currently working on developing my technical,interpersonal and communication
-                    skills.</span>
-            </div>
-            <div class="aboutrightsection">Also passionate about new technologies and <span class="game">gaming</span>
-                <span class="gamingname">You can also call me <span class="kratos">Kratos.</span></span>
-            </div>
-        </section>
-        <hr id="workxp">
-        <section class="thirdsection">
-            <h1 class="heading">Work Experience</h1>
-            <div class="box">
-                <div class="vertical">
-                    <img class="logo" src="./imagess/HTML5.png" alt="html">
-                    <div class="verticaltext">
-                        HTML
+            <section class="secondsection">
+                <div class="aboutleftsection">
+                    I am a developer learning constantly<br />
+                    <span class="info">Currently working on developing my technical,interpersonal and communication skills.</span>
+                </div>
+                <div class="aboutrightsection">
+                    Also passionate about new technologies and <span class="game">gaming</span>
+                    <span class="gamingname">You can also call me <span class="kratos">Kratos.</span></span>
+                </div>
+            </section>
+            <hr id="workxp" />
+            <section class="thirdsection">
+                <h1 class="heading">Work Experience</h1>
+                <div class="box">
+                    <div class="vertical">
+                        <img class="logo" src="./imagess/HTML5.png" alt="html" />
+                        <div class="verticaltext">
+                            HTML
+                        </div>
+                    </div>
+                    <div class="vertical">
+                        <img class="logo" src="./imagess/cs.png" alt="html" />
+                        <div class="verticaltext">
+                            CSS
+                        </div>
+                    </div>
+                    <div class="vertical">
+                        <img class="logo" src="./imagess/js.png" alt="html" />
+                        <div class="verticaltext">
+                            JAVASCRIPT
+                        </div>
+                    </div>
+                    <div class="vertical">
+                        <img class="bootstrap" src="./imagess/bootstrap-logo.png" alt="html" />
+                        <div class="textboot">
+                            BOOTSTRAP
+                        </div>
                     </div>
                 </div>
-                <div class="vertical">
-                    <img class="logo" src="./imagess/cs.png" alt="html">
-                    <div class="verticaltext">
-                        CSS
-                    </div>
+            </section>
+            <hr />
+            <footer>
+                <div class="f1" id="contact">
+                    <img class="footerlogo" src="./imagess/thumb.jpg" alt="png" />
+
+                    <h3>Prashant's Developer Portfolio</h3>
                 </div>
-                <div class="vertical">
-                    <img class="logo" src="./imagess/js.png" alt="html">
-                    <div class="verticaltext">
-                        JAVASCRIPT
-                    </div>
+                <div class="f2">
+                    <ul>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#skills">Work Experience</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
                 </div>
-                <div class="vertical">
-                    <img class="bootstrap" src="./imagess/bootstrap-logo.png" alt="html">
-                    <div class="textboot">
-                        BOOTSTRAP
-                    </div>
+                <div class="f3">
+                    <ul class="contact-list">
+                        <li class="contact-item">
+                            <div class="contact-icon">
+                                <img class="icons" src="./imagess/email1.png" alt="email" />
+                            </div>
+                            <div class="links">
+                                <h3 class="contact-item-title">Email</h3>
+                                <a href="mailto:prashant.6s9p@gmail.com" class="contact-item-link">prashant.6s9p@gmail.com</a>
+                            </div>
+                        </li>
+
+                        <li class="contact-item">
+                            <div class="contact-icon">
+                                <img class="icons" src="./imagess/wtsapp.png" alt="phone" />
+                            </div>
+                            <div class="links">
+                                <h3 class="contact-item-title">Phone</h3>
+                                <a href="https://api.whatsapp.com/send?phone=917719673374" target="_blank" class="contact-item-link">+91 8580767818</a>
+                            </div>
+                        </li>
+
+                        <li class="contact-item">
+                            <div class="contact-icon">
+                                <img class="icons" src="./imagess/linkedin (1).png" alt="linkedin" />
+                            </div>
+                            <div class="links">
+                                <h3 class="contact-item-title">LinkedIn</h3>
+                                <a href="https://www.linkedin.com/in/prashant-kumar-a8b769245/" target="_blank" class="contact-item-link">Profile</a>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
+            </footer>
+            <div class="copyright">
+                www.prashantsportfolio.com | All rights reserved
             </div>
-        </section>
-        <hr>
-        <footer>
-            <div class="f1" id="contact">
-                    <img class="footerlogo" src="./imagess/thumb.jpg" alt="png">
-   
-                <h3>Prashant's Developer Portfolio</h3>
-            </div>
-            <div class="f2">
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#skills">Work Experience</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </div>
-            <div class="f3">
-
-                <ul class="contact-list ">
-                    <li class="contact-item">
-                        <div class="contact-icon">
-                            <img class="icons" src="./imagess/email1.png" alt="email">
-                        </div>
-                        <div class="links">
-                            <h3 class="contact-item-title">Email</h3>
-                            <a href="mailto:prashant.6s9p@gmail.com"
-                                class="contact-item-link">prashant.6s9p@gmail.com</a>
-                        </div>
-                    </li>
-
-                    <li class="contact-item">
-                        <div class="contact-icon">
-                            <img class="icons" src="./imagess/wtsapp.png" alt="phone">
-                        </div>
-                        <div class="links">
-                            <h3 class="contact-item-title">Phone</h3>
-                            <a href="https://api.whatsapp.com/send?phone=917719673374" target="_blank"
-                                class="contact-item-link">+91 8580767818</a>
-                        </div>
-                    </li>
-
-                    <li class="contact-item">
-                        <div class="contact-icon">
-                            <img class="icons" src="./imagess/linkedin (1).png" alt="linkedin">
-                        </div>
-                        <div class="links">
-                            <h3 class="contact-item-title">LinkedIn</h3>
-                            <a href="https://www.linkedin.com/in/prashant-kumar-a8b769245/" target="_blank"
-                                class="contact-item-link">Profile</a>
-                        </div>
-                    </li>
-
-                </ul>
-            </div>
-        </footer>
-        <div class="copyright">
-            www.prashantsportfolio.com | All rights reserved
-        </div>
-    </main>
-    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
-    <script>
-        var typed = new Typed('#element', {
-            strings: ['Passionate', 'Web Developer'],
-            typeSpeed: 50,
-        });
-    </script>
-</body>
-
+        </main>
+        <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+        <script>
+            var typed = new Typed("#element", {
+                strings: ["Passionate", "Web Developer"],
+                typeSpeed: 60,
+            });
+        </script>
+    </body>
 </html>
