--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <li><a href="#workxp">Work Experience</a></li>
                         <li><a href="#contact">Contact Me</a></li>
                         <li>
-                            <a href="/prashant_resume1.pdf" target="_blank" class="button">My Resume</a>
+                            <a href="/prashant_resume.pdf" target="_blank" class="button">My Resume</a>
                         </li>
                     </ul>
                 </div>
